added dependency on db.h Tokutek/mongo#869

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(backup_plugin SHARED
   backup_plugin
   manager
   )
+add_dependencies(backup_plugin install_tdb_h)
 
 install(TARGETS backup_plugin
   DESTINATION ${INSTALL_LIBDIR}/plugins
